--- a/HNSHOP/Views/Shared/_Layout.cshtml
+++ b/HNSHOP/Views/Shared/_Layout.cshtml
@@ -77,7 +77,7 @@
 									<li class="dropdown">
 										<a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
 											<span class="ml-1">@User.Identity.Name</span>
-											<img src="~/images/hnshop/avatar/@User.FindFirst("Avatar")?.Value" class="rounded-circle" style="width:30px; height:30px;" />
+											<img src="~/images/hnshop/avatar/@User.FindFirst("Avatar")?.Value" class="rounded-circle" style="width:40px; height:40px; border-radius: 50%" />
 
 										</a>
 										<ul class="dropdown-menu">
