--- a/HNSHOP/wwwroot/css/main.css
+++ b/HNSHOP/wwwroot/css/main.css
@@ -6,12 +6,36 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,800,300,600,700);
 @import url(http://fonts.googleapis.com/css?family=Abel);
 
-body {
-  font-family: 'Roboto', sans-serif;
-  background:;
-  position: relative;
-  font-weight:400px;
+html, body {
+	height: 100%;
+	margin: 0;
+	padding: 0;
+	font-family: 'Roboto', sans-serif;
 }
+
+.page-wrapper {
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
+}
+
+main {
+	flex: 1;
+	padding-top: 140px; /* tránh header đè lên nội dung */
+}
+
+/* Chỉ cần dùng 1 selector header hoặc .main-header */
+header {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	z-index: 999;
+	background: white;
+	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+	height: 70px; /* nếu biết chắc chiều cao */
+}
+
 
 ul li {
   list-style: none;
